--- a/WazStorageExtensions/packages.config
+++ b/WazStorageExtensions/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="TransientFaultHandlingFx" version="1.8.1" />
-  <package id="WindowsAzure.Caching" version="1.1.0.0" />
-  <package id="WindowsAzure.ServiceBus" version="1.6.0.0" />
-  <package id="WindowsAzure.StorageClient.Library" version="1.6" />
+  <package id="CommonServiceLocator" version="1.0" />
+  <package id="EnterpriseLibrary.Common" version="5.0.505.0" />
+  <package id="EnterpriseLibrary.WindowsAzure.TransientFaultHandling" version="5.0.1118.1" />
+  <package id="TransientFaultHandling.Core" version="5.0.1118.0" />
+  <package id="Unity" version="2.1.505.0" />
+  <package id="Unity.Interception" version="2.1.505.0" />
+  <package id="WindowsAzure.Storage" version="1.6" />
 </packages>
